add lesson 0/1 handout, lesson 1 slides

--- a/0_scoring.html
+++ b/0_scoring.html
@@ -616,6 +616,18 @@ Louis Olive
 <img data-src="images/news_en_bankruptcies_bdf_sector.png" class="r-stretch">
 <p>Source: <a href="https://www.banque-france.fr/en/statistics/compagnies/business-failures-france-2024-12">Banque de France</a>, January 17 2025</p>
 </section>
+<section id="corporate-bankruptcies---fr---2025-ytd" class="slide level2 smaller">
+<h2>Corporate bankruptcies - FR - 2025 YTD</h2>
+<h3 id="alternative-source-3">Alternative source</h3>
+<img data-src="images/news_en_bankruptcies_bdf_lt_ytd205.png" class="r-stretch">
+<p>Source: <a href="https://www.banque-france.fr/en/statistics/compagnies/business-failures-france-2025-07">Banque de France</a>, September 5 2025</p>
+</section>
+<section id="corporate-bankruptcies---fr---2025-ytd-1" class="slide level2 smaller">
+<h2>Corporate bankruptcies - FR - 2025 YTD</h2>
+<h3 id="alternative-source-4">Alternative source</h3>
+<img data-src="images/news_en_bankruptcies_bdf_ytd205.png" class="r-stretch">
+<p>Source: <a href="https://www.banque-france.fr/en/statistics/compagnies/business-failures-france-2025-07">Banque de France</a>, September 5 2025</p>
+</section>
 <section id="corporate-bankruptcies-1" class="slide level2 smaller">
 <h2>Corporate bankruptcies</h2>
 <h3 id="some-definitions">Some definitions</h3>
